fix retina styles

--- a/src/css/modules/0_footer.styl
+++ b/src/css/modules/0_footer.styl
@@ -21,6 +21,7 @@ $footer-text-link = mix(#FFF, $footer-bgcolor, 70%)
 +retina()
   .footer
     background-image: url(../img/footer-texture@2x.png)
+    background-size: 599px 610px
 
 .footer__navi
   float: left
