--- a/src/css/page/notice.styl
+++ b/src/css/page/notice.styl
@@ -35,6 +35,7 @@ $notice-filter-popup-width = 140px
 +retina()
   .notice-subscribe-module
     background-image: url(../img/notice-subscribe@2x.png)
+    background-size: 190px 200px
 
 +between(780px, 1250px)
   .notice-subscribe-module
