--- a/src/css/ui/1_typography.styl
+++ b/src/css/ui/1_typography.styl
@@ -217,8 +217,12 @@ h1, h2, h3, h4, h5, h6
   line-height: 1.35
 
 .typo, .cke_editable
-  h2, h3, h4
+  h2
+    color: $section-text-colors['default']
+  h3
     color: #717171
+  h4
+    color: #222
 
 ::selection
   background: #222
