--- a/src/css/modules/0_header.styl
+++ b/src/css/modules/0_header.styl
@@ -53,8 +53,7 @@ for $section-name in $section-colors
       height: 100%
   
 // retina 下图片 2x
-/*
 +retina()
   .header__background
     background: url(../img/logo-bg@2x.png) repeat-x
-*/
+    background-size: 50px 380px
