support index slider without hyperlink or body

--- a/src/css/page/index_slider.styl
+++ b/src/css/page/index_slider.styl
@@ -119,6 +119,12 @@ $title-color = lighten($primary-color, 10%)
   h2
     color: $title-color
     margin-bottom: 10px
+  
+  &.without--body
+    padding-top: 0
+    h2
+      margin: 0
+      line-height: $slider-desc-height
 
 .index__slider__move
   position: absolute
