--- a/src/css/page/teacher.styl
+++ b/src/css/page/teacher.styl
@@ -2,6 +2,13 @@
   color: #888
   margin-bottom: 20px
 
+.field-name-field-teacher-photo img
+  width: 100%
+  height: auto
+
+.group-teacher-avatar
+  margin-bottom: 20px
+
 // 人员列表定制样式
 .typo, .cke_editable
   .table--non-border-list
