--- a/src/css/modules/2_pagination.styl
+++ b/src/css/modules/2_pagination.styl
@@ -23,6 +23,7 @@ $pagination-border-color-hover = #CCC
     display: inline-block
     list-style: none
     margin: -2px 0 0 0
+    padding: 0
     border-top: 2px solid $pagination-border-color
     
     &:hover
