--- a/src/css/page/index_slider.styl
+++ b/src/css/page/index_slider.styl
@@ -3,6 +3,7 @@ $title-color = lighten($primary-color, 10%)
 
 .fp__slider
   height: 100%
+  height: 100vh
   position: relative
   overflow: hidden
   background: #444
